# ProjectOnCMake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  Sum.cpp  gen.cpp  gen.py
